CE-1530 Fixes missaligned text on abour popup

--- a/src/renderer/theme/Layout.global.scss
+++ b/src/renderer/theme/Layout.global.scss
@@ -36,6 +36,7 @@
   height: 100%; // 100vh;
   padding: 30px 65px;
   grid-template-rows: auto 1fr;
+  min-width: 1024px;
 
   &.app-pipeline {
     display: grid;
